--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
       "biome check --write --no-errors-on-unmatched"
     ]
   },
+  "dependencies": {
+    "@swc/plugin-styled-components": "2.0.11",
+    "reduce-configs": "^1.0.0"
+  },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
     "@playwright/test": "^1.45.3",
