--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "nano-staged": "^0.8.0",
     "playwright": "^1.45.3",
     "simple-git-hooks": "^2.11.1",
+    "styled-components": "^6.1.12",
     "tsup": "^8.2.3",
     "typescript": "^5.5.4"
   },
