--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lint": "biome check .",
     "lint:write": "biome check . --write",
     "prepare": "simple-git-hooks && npm run build",
-    "test": "playwright test"
+    "test": "playwright test",
+    "bump": "npx bumpp"
   },
   "simple-git-hooks": {
     "pre-commit": "npx nano-staged"
@@ -58,6 +59,7 @@
   "packageManager": "pnpm@9.6.0",
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/",
+    "provenance": true
   }
 }
