--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "typescript": "^5.5.4"
   },
   "peerDependencies": {
-    "@rsbuild/core": "1.x || ^1.0.1-beta.0"
+    "@rsbuild/core": "1.x"
   },
   "peerDependenciesMeta": {
     "@rsbuild/core": {
