--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
     ]
   },
   "dependencies": {
-    "@swc/plugin-styled-components": "5.0.0",
+    "@swc/plugin-styled-components": "^6.0.2",
     "reduce-configs": "^1.1.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@playwright/test": "^1.49.0",
-    "@rsbuild/core": "^1.1.6",
+    "@rsbuild/core": "^1.2.0-alpha.0",
     "@rslib/core": "^0.1.1",
     "@types/node": "^22.10.1",
     "nano-staged": "^0.8.0",
@@ -49,7 +49,7 @@
     "typescript": "^5.7.2"
   },
   "peerDependencies": {
-    "@rsbuild/core": "1.x"
+    "@rsbuild/core": "^1.2.0"
   },
   "peerDependenciesMeta": {
     "@rsbuild/core": {
