--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@playwright/test": "^1.52.0",
-    "@rsbuild/core": "^1.3.22",
+    "@rsbuild/core": "^1.4.0-beta.4",
     "@rslib/core": "^0.9.1",
     "@types/node": "^22.15.29",
     "nano-staged": "^0.8.0",
@@ -49,7 +49,7 @@
     "typescript": "^5.8.3"
   },
   "peerDependencies": {
-    "@rsbuild/core": "^1.2.0"
+    "@rsbuild/core": "^1.4.0-beta.4 || ^1.4.0"
   },
   "peerDependenciesMeta": {
     "@rsbuild/core": {
