--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
     ]
   },
   "dependencies": {
-    "@swc/plugin-styled-components": "^9.1.0",
+    "@swc/plugin-styled-components": "^10.0.0",
     "reduce-configs": "^1.1.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@playwright/test": "^1.55.1",
-    "@rsbuild/core": "^1.5.13",
+    "@rsbuild/core": "^1.6.0",
     "@rslib/core": "^0.15.0",
     "@types/node": "^22.18.8",
     "nano-staged": "^0.8.0",
@@ -49,7 +49,7 @@
     "typescript": "^5.9.3"
   },
   "peerDependencies": {
-    "@rsbuild/core": "^1.4.0-beta.4 || ^1.4.0"
+    "@rsbuild/core": "^1.6.0 || ^1.4.0"
   },
   "peerDependenciesMeta": {
     "@rsbuild/core": {
