--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@playwright/test": "^1.57.0",
-    "@rsbuild/core": "^1.6.10",
+    "@rsbuild/core": "^1.7.0-beta.0",
     "@rslib/core": "^0.18.2",
     "@types/node": "^22.19.1",
     "nano-staged": "^0.9.0",
@@ -49,7 +49,7 @@
     "typescript": "^5.9.3"
   },
   "peerDependencies": {
-    "@rsbuild/core": "^1.6.0 || ^1.4.0"
+    "@rsbuild/core": "^1.7.0-beta.0 || ^1.7.0"
   },
   "peerDependenciesMeta": {
     "@rsbuild/core": {
