--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "typescript": "^5.9.3"
   },
   "peerDependencies": {
-    "@rsbuild/core": "^1.7.0-beta.0 || ^1.7.0"
+    "@rsbuild/core": "^1.7.0 || ^2.0.0-0"
   },
   "peerDependenciesMeta": {
     "@rsbuild/core": {
